[gd_scene load_steps=6 format=3 uid="uid://cjv3bvptdpiap"]

[ext_resource type="Script" uid="uid://bu80h2b1remc3" path="res://ui/trap_selection/erase_button/erase_button.gd" id="1_k6fv2"]
[ext_resource type="Texture2D" uid="uid://c3hgkio6yl7xc" path="res://assets/ui/icons/erase_icon.png" id="2_o6gyt"]
[ext_resource type="Texture2D" uid="uid://dqm6r0kraajyj" path="res://assets/free-top-down-roguelike-game-kit-pixel-art-craftpix-net-436971/4 GUI/1 Interface/TileMap8.png" id="2_ujdl8"]
[ext_resource type="LabelSettings" uid="uid://brbf5lml7xnsv" path="res://ui/pixel_label_settings.tres" id="4_v6iom"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0a22n"]

[node name="EraseButton" type="PanelContainer"]
offset_right = 18.0
offset_bottom = 21.0
focus_mode = 2
script = ExtResource("1_k6fv2")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_ujdl8")
region_rect = Rect2(176, 192, 16, 16)
patch_margin_left = 2
patch_margin_top = 3
patch_margin_right = 2
patch_margin_bottom = 2

[node name="FxContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="FlashColor" type="ColorRect" parent="FxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.5)

[node name="FocusColor" type="ColorRect" parent="FxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.2)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="FunctionIcon" type="TextureRect" parent="MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_o6gyt")
stretch_mode = 5

[node name="DisableOverlay" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_0a22n")

[node name="ColorRect" type="ColorRect" parent="DisableOverlay"]
layout_mode = 2
mouse_filter = 2
color = Color(0.09320182, 0.07846785, 0.14733289, 0.65000004)

[node name="MarginContainer" type="MarginContainer" parent="DisableOverlay"]
layout_mode = 2
mouse_filter = 2

[node name="OverlayText" type="Label" parent="DisableOverlay/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "LOCKED"
label_settings = ExtResource("4_v6iom")
horizontal_alignment = 1
vertical_alignment = 1
